--- a/templates/quiz/adminbase.html
+++ b/templates/quiz/adminbase.html
@@ -39,7 +39,7 @@
 
     .logout_btn {
       padding: 5px;
-      background: #19B3D3;
+      background: #e68a00;
       text-decoration: none;
       float: right;
       margin-top: -30px;
@@ -135,8 +135,7 @@
 
     .content {
       margin-left: 250px;
-      background: url(background.png) no-repeat;
-      background-position: center;
+
       background-size: cover;
       height: 100vh;
       transition: 0.5s;
@@ -157,7 +156,8 @@
 
 </head>
 
-<body>
+<body style =
+"background-image: url({% static "image/bg.jpg" %})">
 
   <input type="checkbox" id="check">
   <!--header area start-->
@@ -166,7 +166,7 @@
       <i style="left: 200px;margin-top: 17px;"class="fas fa-bars" id="sidebar_btn"></i>
     </label>
     <div class="left_area">
-      <h3 class="text-align:center;"> Prabodh Quiz</h3>
+      <h3 class="text-align:center;"><font face = "Comic sans MS" size =" 4"> Prabodh Quiz</font></h3>
     </div>
     <div class="right_area">
       <a href="/logout" class="logout_btn">Logout</a>
@@ -176,9 +176,6 @@
   <!--sidebar start-->
   <div class="sidebar" style="background: #9900ff;">
     <center>
-    {% for t in teachers %}
-        <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="60px" width="70px"/>
-      {% endfor %}
       <h4><br><font face = "Comic sans MS" size =" 3">Admin</font></br></h4>
 
     </center>
