--- a/templates/quiz/adminlogin.html
+++ b/templates/quiz/adminlogin.html
@@ -9,7 +9,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: linear-gradient(to right, #b92b27, #ff99ff, #ccffb3)
+    background: linear-gradient(to right,  #aaff80, #ff99ff)
 }
 
 
@@ -31,7 +31,7 @@
 }
 .box
 {
-    background: #ffff1a;
+    background: #b3b3b3;
 }
 
 .box h1 {
