--- a/templates/student/student-pvideo.html
+++ b/templates/student/student-pvideo.html
@@ -74,7 +74,7 @@
 <div style="padding-left:7%;">
 {% for i in kk %}
 <br>
- <br>{{ i.field_link}}</br>
+ <br><h2 style="color:red;">{{ i.field_link}}</h2></br>
 <br><br>
 
   <video width="420" height="240" controls>
