--- a/templates/teacher/teacher-nutube.html
+++ b/templates/teacher/teacher-nutube.html
@@ -30,7 +30,7 @@
   {% endfor %}
 {% endif %} 
 <br><br>
-<h2 style="text-align:center; color:blue;">ADD DRIVE LINK </h2>
+<h2 style="text-align:center; color:red;">ADD DRIVE LINK </h2>
 <form method="POST" autocomplete="off" style="margin:100px;margin-top: 0px;">
   <div class="form-group">
     <label for="exampleInputPassword1">Link Url</label>
