--- a/templates/teacher/teacher_question.html
+++ b/templates/teacher/teacher_question.html
@@ -22,11 +22,11 @@
       }
   
       .bg-c-blue {
-        background: #04868f;
+        background: #e60073;
       }
   
       .bg-c-green {
-        background:#4C51BF;
+        background:#99e600;
       }
   
       .bg-c-yellow {
