--- a/templates/quiz/index.html
+++ b/templates/quiz/index.html
@@ -12,15 +12,15 @@
 <br>
 <section id="section-jumbotron" class="jumbotron jumbotron-fluid d-flex justify-content-center align-items-center">
   <div class="container text-center">
-    <h1 class="display-1 text-info">Let's Quiz</h1>
-    <p class="display-4 d-none d-sm-block">Test your skills and become a master.</p>
-    <p class="lead">We organize quizzes on various topics.</p>
+    <h1 class="display-1 text-info"><font face = "Comic sans MS" size =" 3">Welcome to Prabodh Educational Organisation</font></h1>
+    <p class="display-4 d-none d-sm-block"><font face = "Comic sans MS" size =" 3">We will help and echance your skills through this flatform</font></p>
+    <p class="lead"><font face = "Comic sans MS" size =" 3">We organize video tutorials/quizzes on various topics.</font></p>
 
     
 
-    <p class="lead">Sign up if you haven't already and get access to millions of quizzes on the topic of your interest.</p>
-    <p><strong> Start Your Journey Here:</strong></p>
-    <a href="/student/studentsignup" class="btn btn-lg btn-info" style="padding-right: 35px;"><i class="fa fa-user-plus" aria-hidden="true"></i> Sign Up</a>
+    <p class="lead"><font face = "Comic sans MS" size =" 3">Sign up if you haven't account and get access to prabodh.</font></p>
+    <p><strong><font face = "Comic sans MS" size =" 3">Start Your Journey Here:</font></strong></p>
+    <a href="/student/studentsignup" class="btn btn-lg btn-secondary" style="padding-right: 35px;"><i class="fa fa-user-plus" aria-hidden="true"></i> <font face = "Comic sans MS" size =" 3">Sign Up</font></a>
     
     <br><br><br>
   </div>  
