--- a/templates/quiz/logout.html
+++ b/templates/quiz/logout.html
@@ -8,7 +8,7 @@
   <body>
     {% include "quiz/navbar.html" %}
     <br><br><br><br>
-<h1  style="text-align:center; color:#80bfff;"> Logout successfully</h1>
+<h1  style="text-align:center; color:#80bfff;"><font face = "Comic sans MS" size =" 3">Logout successfully</font></h1>
 
 <br><br><br><br><br>
 <br><br><br><br><br>
