--- a/templates/student/start_exam.html
+++ b/templates/student/start_exam.html
@@ -54,7 +54,7 @@
           </div>
 
         {% endfor %}
-        <input class="btn btn-info btn-lg"   type="submit" value="Submit">  
+        <input class="btn btn-danger btn-lg"   type="submit" value="Submit">  
     </form>
   </div>
 
