--- a/templates/student/student_dashboard.html
+++ b/templates/student/student_dashboard.html
@@ -22,19 +22,19 @@
       }
   
       .bg-c-blue {
-        background: #04868f;
+        background: #ff66cc;
       }
   
       .bg-c-green {
-        background:#4C51BF;
+        background:#ff66cc;
       }
   
       .bg-c-yellow {
-        background: #F56565;
+        background: #ff66cc;
       }
   
       .bg-c-pink {
-        background: #663a30;
+        background: #4dff4d;
       }
   
   
