--- a/templates/student/studentclick.html
+++ b/templates/student/studentclick.html
@@ -25,13 +25,13 @@
   {% include "quiz/navbar.html" %}
   <br><br>
   <div class="jumbotron" style="margin-bottom:0px;">
-    <h1 class="display-4">Hello, Student</h1>
-    <p class="lead">Welcome to Online Quiz</p>
+    <h1 class="display-4"><font face = "Comic sans MS" size =" 7">Hai, Student</font></h1>
+    <p class="lead"><font face = "Comic sans MS" size =" 6">Welcome to Prabodh</font></p>
     <hr class="my-4">
-    <p>You can access various features after Login.</p>
+    <p><font face = "Comic sans MS" size ="5">You can access prabodh after Login.</font></p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="studentsignup" role="button">Create Your Account</a>
-      <a class="btn btn-primary btn-lg" href="studentlogin" role="button">Login</a>
+      <a class="btn btn-secondary btn-lg" href="studentsignup" role="button">Create Your Account</a>
+      <a class="btn btn-danger btn-lg" href="studentlogin" role="button">Login</a>
     </p>
     <br><br><br><br><br><br>
   </div>
