--- a/templates/student/take_exam.html
+++ b/templates/student/take_exam.html
@@ -13,12 +13,12 @@
 <div class="container my-4">
     <div class="jumbotron">
 
-	      <h3 class="text-info text-center">Before you start the Exam, here are the rules</h3>
+	      <h3 class="text-danger text-center">Please read rules before start the exam</h3>
 
         <div class="row">
 
             <div class="card border-info mx-4 my-4">
-                <div class="card-body text-info">
+                <div class="card-body text-danger">
 
                     <h4 class="card-title">Exam Details :</h4>
                     <p class="card-text">
@@ -33,21 +33,18 @@
 
                     <h4 class="card-title">Rules :</h4>
                     <p class="card-text">
-                        </p><ul style="list-style:decimal;">
+                        </p><ul style="list-style:decimal; color:black;">
                             <li>All questions are multiple choice question.</li>
-                            <li><span class="text-danger">Only one choice is correct.</span></li>
-                            <li>Every question carry different marks 
-                            </li>
-                
-                            <li>Try to answer as quickly as you can.</li>
+                            <li>Only one choice is correct.</li>
+                            <li>Every question carry different marks </li>
                             <li>If you press refresh or go back to the previous page, there will be a new question for you and the question you were on will be counted as attempted.</li>
                             <li>Questions are displayed randomly for every user.</li>
-                            <li>You will be told your marks immediately when you submit the answer.</li>
+                
                         </ul>
                     <p></p>
-                    <a href="{% url 'start-exam' course.id  %}" class="btn btn-info">Let's Start</a>
+                    <a href="{% url 'start-exam' course.id  %}" class="btn btn-danger">Let's Start</a>
                 </div>  
-                <div class="card-footer">Best Of Luck</div>  
+                <div class="card-footer">All the best</div>  
             </div>  
         </div>  
 
