--- a/templates/teacher/teacher-drive.html
+++ b/templates/teacher/teacher-drive.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 {% block content %}
 
-
+{% load embed_video_tags %}
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,11 +22,11 @@
       }
   
       .bg-c-blue {
-        background: #ff8080;
+        background: #04868f;
       }
   
       .bg-c-green {
-        background:#ffd480;
+        background:#4C51BF;
       }
   
       .bg-c-yellow {
@@ -50,6 +50,7 @@
   
       .card .card-block {
         padding: 25px;
+        
       }
   
       .order-card i {
@@ -70,36 +71,17 @@
     </style>
   </head>
 <br><br>
+<div style="padding-left:7%;">
+{% for i in kk %}
+<br>
+ <br>{{ i.field_link}}</br>
+<br><br>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-xl-6">
-        <div class="card bg-c-blue order-card">
-          <div class="card-block">
-            <h6 class="m-b-20"> <a href="teacher-add-exam" style="text-decoration: none;color:white;">Add Exam</a> </h6>
-            <h2 class="text-right"><i class="fas fa-plus f-left"></i></h2>
-            
-          </div>
-        </div>
-      </div>
-  
-      <div class="col-md-4 col-xl-6">
-        <div class="card bg-c-green order-card">
-          <div class="card-block">
-            <h6 class="m-b-20"><a href="teacher-view-exam" style="text-decoration: none;color:white;">View Exams</a> </h6>
-            <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
-            
-          </div>
-        </div>
-      </div>
-  
-     
-  
-     
-    </div>
-  </div>
-
-
+  <video width="420" height="240" controls>
+    <source src="{{ i.field_name }}" type='video/mp4'/>  
+  </video>  
+{% endfor %}
+</div>
 <br><br><br><br><br><br><br><br><br><br>
 
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
