--- a/templates/teacher/teacher-utube.html
+++ b/templates/teacher/teacher-utube.html
@@ -20,14 +20,14 @@
 <body>
 {% if messages %}
   {% for msg in messages %}
-  <center>
+  <div style="padding-left:7%;">
     <div class="alert alert-danger" role="alert">
       {{msg}}
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
         </button>
     </div>  
-  </center>  
+  </div>  
   {% endfor %}
 {% endif %} 
 <br><br>
@@ -35,11 +35,7 @@
 <form method="POST" autocomplete="off" style="margin:100px;margin-top: 0px;">
 <div class="form-group">
     <label for="exampleInputPassword1">Link Url</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="url" name="videoo">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Link Name</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="url" name="cap">
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="url" name="ename">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
