--- a/templates/teacher/teacher_dashboard.html
+++ b/templates/teacher/teacher_dashboard.html
@@ -18,23 +18,23 @@
       }
   
       .order-card {
-        color: rgb(255, 255, 255);
+        color: #ffffff;
       }
   
       .bg-c-blue {
-        background: #04868f;
+        background: #ff4d94;
       }
   
       .bg-c-green {
-        background:#4C51BF;
+        background:#ff4d94;
       }
   
       .bg-c-yellow {
-        background: #F56565;
+        background:#e6e600;
       }
   
       .bg-c-pink {
-        background: #663a30;
+        background: #66ff66;
       }
   
   
