--- a/templates/teacher/teacherclick.html
+++ b/templates/teacher/teacherclick.html
@@ -25,13 +25,13 @@
   {% include "quiz/navbar.html" %}
   <br><br>
   <div class="jumbotron" style="margin-bottom:0px;">
-    <h1 class="display-4">Hello, Teacher</h1>
-    <p class="lead">Welcome to Online Quiz</p>
+    <h1 class="display-4"><font face = "Comic sans MS" size =" 7">Hai, Teacher</font></h1>
+    <p class="lead"><font face = "Comic sans MS" size =" 6">Welcome to Prabodh</font></p>
     <hr class="my-4">
-    <p>You can access various features after Login.</p>
+    <p><font face = "Comic sans MS" size ="5">You will access various options after teacher Login.</font></p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="teachersignup" role="button">Create Your Account</a>
-      <a class="btn btn-primary btn-lg" href="teacherlogin" role="button">Login</a>
+      <a class="btn btn-secondary btn-lg" href="teachersignup" role="button">Create Your Account</a>
+      <a class="btn btn-warning btn-lg" href="teacherlogin" role="button">Login</a>
     </p>
     <br><br><br><br>
   </div>
