--- a/templates/teacher/teacherlogin.html
+++ b/templates/teacher/teacherlogin.html
@@ -9,7 +9,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: linear-gradient(to right, #b92b27, #1565c0)
+    background: linear-gradient(to right,#cc66ff,  #ff4da6)
 }
 
 .box {
@@ -18,7 +18,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    background: #191919;
+    background: #99ffd6;
 
     text-align: center;
     transition: 0.25s;
