--- a/templates/quiz/adminlogin.html
+++ b/templates/quiz/adminlogin.html
@@ -90,6 +90,9 @@
         </div>
     </div>
 </div>
+{% if form.errors %}
+<p>Your username and password didn't match. Please try again.</p>
+{% endif %}
 <br><br><br><br><br>
 {% include "quiz/footer.html" %}
   </body>
