--- a/templates/teacher/teacherlogin.html
+++ b/templates/teacher/teacherlogin.html
@@ -96,6 +96,9 @@
         </div>
     </div>
 </div>
+{% if form.errors %}
+<p>Your username and password didn't match. Please try again.</p>
+{% endif %}
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br>
