--- a/templates/myhome.html
+++ b/templates/myhome.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+  <meta name="google-site-verification" content="HW_f8QsD-n8ZoqKv9R48KloJ1cn12CIm4F3CrnTC2Iw" />
   <div class="loader"></div>
     <!-- Required meta tags -->
     <meta charset="utf-8">
