--- a/templates/quiz/footer.html
+++ b/templates/quiz/footer.html
@@ -13,7 +13,7 @@
 -----------------------------------------*/
     footer {
       padding: 0px 0px 0px 0px;
-      background-color: #9900ff;
+      background-color: #001f3f;
       margin: 0px;
       
     }
