--- a/templates/student/student-video.html
+++ b/templates/student/student-video.html
@@ -74,7 +74,8 @@
 {% for q in klk%}
 <center>
 <br>
- <iframe width="400" height="300"
+ <iframe allowfullscreen="allowfullscreen"
+ width="300" height="200"
   src="{{q.ename}}">
 </iframe>
 </center>
