--- a/templates/student/student_exam.html
+++ b/templates/student/student_exam.html
@@ -41,7 +41,7 @@
 
         <td> {{t.course_name}}</td>
         
-        <td><a href="{% url 'take-exam' t.id  %}"><i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></a></td>
+        <td><a href="{% url 'take-exam' t.id  %}">Take Exam <i class="fa fa-arrow-right" aria-hidden="true"></i></a></td>
       </tr>
       {% endfor %}
     </table>
