--- a/templates/teacher/teacher-uvideo.html
+++ b/templates/teacher/teacher-uvideo.html
@@ -17,7 +17,8 @@
 {% for q in kkk%}
 <center>
 <br>
- <iframe width="400" height="300"
+ <iframe allowfullscreen="allowfullscreen"
+ width="350" height="280"
   src="{{q.ename}}">
 </iframe>
 </center>
