--- a/templates/myhome.html
+++ b/templates/myhome.html
@@ -21,14 +21,13 @@
      <meta charset="utf-8">
     <title></title>
     </style>  
-     <a class="navbar-brand" href="#" ></a><img src="{% static "image/logo.png" %}" style="width:8%;">
-      <h2><font face = "Comic sans MS" size =" 10">&nbsp;&nbsp;Prabodh</font></h2>
+     <a class="navbar-brand" href="#" ></a><img src="{% static "image/logo.png" %}" style="width:9%;">
+      <h2 class="mk"><font face = "Comic sans MS" size =" 10">&nbsp;&nbsp;Prabodh</font></h2>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
       </button>
   
-  
-  
+         
   {% if user.is_authenticated %}
       <div class="form-inline  my-3 my-lg-0 ml-auto">
   
@@ -69,19 +68,21 @@
          <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
            <li class="nav-item active">
-            <a class="nav-link" href="{% url "studentclick" %}" style="color:#000000;"><font face = "Comic sans MS" size =" 4">Student</font> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url "studentclick" %}" style="color:#ffff;"><font face = "Comic sans MS" size =" 4"><h5 style="color:#ffff;">Student</h5></font></a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="{% url "teacherclick" %}"style="color:#000000;"><font face = "Comic sans MS" size =" 4">Teacher</font></a>
+            <a class="nav-link" href="{% url "teacherclick" %}"style="color:#ffff;"><font face = "Comic sans MS" size =" 4"><h5 style="color:#ffff;">Teacher</h5></font></a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="{% url "adminlogin" %}"style="color:#000000;"><font face = "Comic sans MS" size =" 4">Admin</font></a>
+            <a class="nav-link" href="{% url "adminlogin" %}"><font face = "Comic sans MS" size =" 4"><h5 style="color:#ffff;">Admin</h5></font></a>
            </li>
           </ul>
          </div>    
 
   {% endif %}  
+  <a href="syllabus/s" class="nav-item nav-link" style="color:#ffff;"><font face = "Comic sans MS" size =" 4">Syllabus</font></a>  
   </nav>
+  
   </div> 
     {% block content %}
     {% endblock content %}
@@ -92,14 +93,14 @@
   <div class="col-md-6">
    <p class="promo-title"><font face = "Comic sans MS" size =" 10">Welcome to Prabodh</font></p>
    <br>
-   <p style="padding-left:4%;font-style: italic;"><a href='#'><img class="bg-img" src="{% static "image/botton.png" %}" style="width:10%;"alt="background image"></a>watch&nbsp;&nbsp;</p>
+   <p class="kl"style="padding-left:4%;font-style: italic;"><a href='#'><img class="bg-img" src="{% static "image/botton.png" %}" style="width:10%;"alt="background image"></a>watch&nbsp;&nbsp;</p>
    </br>
   </div>
   <div class="col-md-6">
   <link rel="stylesheet" href="{% static "css/tandus.css" %}"/>
   <section class="pp">
     <div class="float-right;">
-     <img src="{% static "image/g3.jpg" %}"style="width:130%;">
+     <img src="{% static "image/g3.jpg" %}"style="width:110%;">
     </div>
   </section>
    </div> 
