--- a/templates/quiz/adminbase.html
+++ b/templates/quiz/adminbase.html
@@ -166,7 +166,7 @@
       <i style="left: 200px;margin-top: 17px;"class="fas fa-bars" id="sidebar_btn"></i>
     </label>
     <div class="left_area">
-      <h3 class="text-align:center;"><font face = "Comic sans MS" size =" 4"> Prabodh Quiz</font></h3>
+      <h3 class="text-align:center;"><font face = "Comic sans MS" size =" 4"> Prabodh</font></h3>
     </div>
     <div class="right_area">
       <a href="/logout" class="logout_btn">Logout</a>
@@ -185,6 +185,8 @@
     <a href="/admin-student"><i class="fas fa-user-graduate"></i><span><font face = "Comic sans MS" size =" 3">Student</font></span></a>
     <a href="/admin-course"><i class="fas fa-book"></i><span>Courses</span></a>
     <a href="/admin-question"><i class="fas fa-question-circle"></i><span><font face = "Comic sans MS" size =" 3">Questions</font></span></a>
+    <a href="/admin-utube"><i class="fa fa-eye" aria-hidden="true"></i><span><font face = "Comic sans MS" size =" 3">Youtube Videos</font></span></a>
+    <a href="/admin-pvideo"><i class="fa fa-eye" aria-hidden="true"></i><span><font face = "Comic sans MS" size =" 3">Prabodh Videos</font></span></a>
     
 
 
@@ -199,9 +201,6 @@
 
     {% endblock content %}
 
-
-    <br><br><br><br><br>
-    {% include "quiz/footer.html" %}
   </div>
   <!--content end-->
 </body>
