--- a/templates/quiz/navbar.html
+++ b/templates/quiz/navbar.html
@@ -16,7 +16,7 @@
 
     }
     .bg-dark {
-    background-color: #212529!important;
+    background-color: #001f3f!important;
 }
     .navbar-brand {
       font-size: 20px;
@@ -32,8 +32,8 @@
 
   <div class="bs-example">
   <link rel="stylesheet" href="{% static "css/base.css" %}"/>
-    <nav class="navbar navbar-expand-md  navbar-dark fixed-top"style="background-color:#9900ff;">
-    <a style="color: #000000;text-decoration: none; " href="/"><font face = "Comic sans MS" size =" 5">Prabodh Quiz</font><br /></a>  
+    <nav class="navbar navbar-expand-md  navbar-dark fixed-top"style="background-color:#001f3f;">
+    <a style="color: #ffff;text-decoration: none; " href="/"><font face = "Comic sans MS" size =" 5">Prabodh</font><br /></a>  
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
