--- a/templates/student/student_dashboard.html
+++ b/templates/student/student_dashboard.html
@@ -22,19 +22,19 @@
       }
   
       .bg-c-blue {
-        background: #ff66cc;
+        background: #FF4136;
       }
   
       .bg-c-green {
-        background:#ff66cc;
+        background:#FF4136;
       }
   
       .bg-c-yellow {
-        background: #ff66cc;
+        background: #FF4136;
       }
   
       .bg-c-pink {
-        background: #4dff4d;
+        background: #FF851B;
       }
   
   
@@ -78,7 +78,7 @@
       <div class="col-md-4 col-xl-6">
         <div class="card bg-c-yellow order-card">
           <div class="card-block">
-            <h6 class="m-b-20">Total Exams Available</h6>
+            <h6 class="m-b-20"><font face = "Comic sans MS" size =" 4">Total Exams Available</font></h6>
            <h2 class="text-right"><i class="fas fa-book f-left"></i><span>{{total_course}}</span></h2>
             
           </div>
@@ -88,7 +88,7 @@
       <div class="col-md-4 col-xl-6">
         <div class="card bg-c-pink order-card">
           <div class="card-block">
-            <h6 class="m-b-20">Total Questions</h6>
+            <h6 class="m-b-20"><font face = "Comic sans MS" size =" 4">Total Questions</font></h6>
             <h2 class="text-right"><i class="fas fa-question-circle f-left"></i><span>{{total_question}}</span></h2>
             
           </div>
