--- a/templates/student/studentlogin.html
+++ b/templates/student/studentlogin.html
@@ -9,31 +9,31 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: linear-gradient(to right, #ffff99,#ddddbb, #1565c0)
+    background-color:#85144b; 
 }
 .box
 {
-   background:#00ace6; 
+   background:#ffff; 
 }
 
 .box input[type="text"],
 .box input[type="password"] {
     border: 0;
-    background: #ffa64d;
+    background:#ff55; 
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid #3498db;
+    border: 2px solid #ffff;
     padding: 10px 10px;
     width: 250px;
     outline: none;
-    color: white;
+    color:#85144b; 
     border-radius: 24px;
     transition: 0.25s
 }
 
 .box h1 {
-    color: white;
+    color:#85144b; ;
     text-transform: uppercase;
     font-weight: 500
 }
@@ -46,7 +46,7 @@
 
 .box input[type="submit"] {
     border: 0;
-    background: none;
+    background:#85144b; 
     display: block;
     margin: 20px auto;
     text-align: center;
@@ -60,13 +60,14 @@
 }
 
 .box input[type="submit"]:hover {
-    background: #2ecc71
+    background: #2ecc71;
 }
 
 
     </style>
   </head>
-  <body>
+{% load static %}  
+  <body style="background-color:#ffff; ">
     {% include "quiz/navbar.html" %}
     <div style=" padding-top: 15%;">
     <div class="container">
@@ -88,11 +89,21 @@
         </div>
     </div>
     </div>
-<br><br><br><br><br><br>    
+<br><br>  
 </div>
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+<center>
+<h2>Your username and password didn't match. Please try again.</h2>
+</center>
 {% endif %}
+<br><br><br><br><br>
+<br><br><br><br><br>
+<br><br><br><br><br>
+<br><br><br><br><br>
+<br><br><br><br><br>
+<br><br><br><br><br>
+<br>
 {% include "quiz/footer.html" %}
+
   </body>
 </html>
