--- a/templates/teacher/teacherlogin.html
+++ b/templates/teacher/teacherlogin.html
@@ -9,57 +9,60 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: linear-gradient(to right,#cc66ff,  #ff4da6)
+    
 }
 
 .box {
     width: 500px;
-    padding: 40px;
+    
     position: absolute;
     top: 50%;
-    left: 50%;
-    background: #99ffd6;
+    left: 40%;
+    right:50%;
+    background: #ffff;
 
     text-align: center;
     transition: 0.25s;
-    margin-top: 100px
+    margin-top: 120px
 }
 
 .box input[type="text"],
 .box input[type="password"] {
     border: 0;
-    background: none;
+    background:#ff55; 
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid #3498db;
+    border: 2px solid #ffff;
     padding: 10px 10px;
     width: 250px;
     outline: none;
-    color: white;
+    color: #FF4136;
     border-radius: 24px;
     transition: 0.25s
 }
 
 .box h1 {
-    color: white;
+    color: #001f3f;
     text-transform: uppercase;
-    font-weight: 500
+    font-weight: 700
+    
 }
 
 .box input[type="text"]:focus,
 .box input[type="password"]:focus {
     width: 300px;
-    border-color: #2ecc71
+    border-color: #ff77;
+    background:#ff55; 
 }
 
 .box input[type="submit"] {
     border: 0;
-    background: none;
+    background:#FF4136;
     display: block;
-    margin: 20px auto;
+    margin: 30px auto;
     text-align: center;
-    border: 2px solid #2ecc71;
+    border: 3px solid #2ecc71;
     padding: 14px 40px;
     outline: none;
     color: white;
@@ -69,7 +72,7 @@
 }
 
 .box input[type="submit"]:hover {
-    background: #2ecc71
+    background: #001f3f;
 }
 
 
@@ -90,18 +93,23 @@
                      {% render_field form.password class="form-control" placeholder="Password" %}
 
                      <input type="submit" name="" value="Login">
-
+                 {% if form.errors %}
+                  <h3>Your username and password didn't match. Please try again.</h3>
+                 {% endif %}
                 </form>
             </div>
         </div>
     </div>
 </div>
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+
+
+
+<br><br><br>
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br>
 {% include "quiz/footer.html" %}
   </body>
 </html>
