solved video bug

--- a/templates/student/classmain.html
+++ b/templates/student/classmain.html
@@ -84,7 +84,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> <a href="demov" style="text-decoration: none;color:white;">6th class video tutorials</a> </h6>
+            <h6 class="m-b-20"> <a href="demovs" style="text-decoration: none;color:white;">6th class video tutorials</a> </h6>
             <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_student}}</span></h2>
             
           </div>
@@ -94,7 +94,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-green order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="demov1" style="text-decoration: none;color:white;">7th class video tutorials</a> </h6>
+            <h6 class="m-b-20"><a href="demov1s" style="text-decoration: none;color:white;">7th class video tutorials</a> </h6>
             <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_teacher}}</span></h2>
             
           </div>
@@ -104,7 +104,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-yellow order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="demov2" style="text-decoration: none;color:white;">8th class video tutorials</a></h6>
+            <h6 class="m-b-20"><a href="demov2s" style="text-decoration: none;color:white;">8th class video tutorials</a></h6>
            <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_course}}</span></h2>
             
           </div>
@@ -114,7 +114,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-pink order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="demov3" style="text-decoration: none;color:white;">9th class video tutorials</a></h6>
+            <h6 class="m-b-20"><a href="demov3s" style="text-decoration: none;color:white;">9th class video tutorials</a></h6>
             <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_question}}</span></h2>
             
           </div>
@@ -129,7 +129,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> <a href="demov4" style="text-decoration: none;color:white;">10th class video tutorials</a> </h6>
+            <h6 class="m-b-20"> <a href="demov4s" style="text-decoration: none;color:white;">10th class video tutorials</a> </h6>
             <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_student}}</span></h2>
             
           </div>
@@ -139,7 +139,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-green order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="future" style="text-decoration: none;color:white;">Special Videos</a> </h6>
+            <h6 class="m-b-20"><a href="futures" style="text-decoration: none;color:white;">Special Videos</a> </h6>
             <h2 class="text-right"><i class="fa fa-space-shuttle" aria-hidden="true"></i><span>{{total_teacher}}</span></h2>
             
           </div>
@@ -149,7 +149,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-yellow order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="future" style="text-decoration: none;color:white;">Prabodh Lab Videos</a></h6>
+            <h6 class="m-b-20"><a href="futures" style="text-decoration: none;color:white;">Prabodh Lab Videos</a></h6>
            <h2 class="text-right"><i class="fa fa-flask" aria-hidden="true"></i><span>{{total_course}}</span></h2>
             
           </div>
@@ -159,7 +159,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="future" style="text-decoration: none;color:white;">Environmental Videos</a></h6>
+            <h6 class="m-b-20"><a href="futures" style="text-decoration: none;color:white;">Environmental Videos</a></h6>
             <h2 class="text-right"><i class="fa fa-tree" aria-hidden="true"></i><span>{{total_question}}</span></h2>
             
           </div>
