--- a/templates/student/demov2s.html
+++ b/templates/student/demov2s.html
@@ -52,7 +52,7 @@
     <table class="table table-hover" id="dev-table">
       <thead>
       </thead>
-      {% for t in m2 %}
+      {% for t in m2s %}
       <tr>
 
         <td> {{t.eig}}</td>
