--- a/templates/student/demoview1s.html
+++ b/templates/student/demoview1s.html
@@ -23,13 +23,13 @@
 </head>
 <br><br>
     
-    {% for i in q2 %} 
+    {% for i in q1s %} 
 <center>
-      <h1>{{i.eig}}</h1>
+      <h1>{{i.sev}}</h1>
     
     <br>
      <video width="480" controls>
-      <source src="{{ i.eign }}" type='video/mp4'/>  
+      <source src="{{ i.sevn }}" type='video/mp4'/>  
      </video> 
 </center>        
     {% endfor %}            
