--- a/templates/student/demov3s.html
+++ b/templates/student/demov3s.html
@@ -39,9 +39,7 @@
 <div class="container">
   <div class="panel panel-danger">
     <div class="panel-heading">
-    <center>
-      <h5 class="panel-title">7th class</h5>
-    </center>  
+      <h6 class="panel-title">9th class</h6>
       <tr>
         <center>
           <th>Videos&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
@@ -54,13 +52,13 @@
     <table class="table table-hover" id="dev-table">
       <thead>
       </thead>
-      {% for t in m1 %}
+      {% for t in m3s %}
       <tr>
 
-        <td> {{t.sev}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td> {{t.nine}}</td>
         
         
-        <td><a style="padding-left:40%;"<i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview1' t.id  %}"></i></a></td>
+        <td><a <i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview3' t.id  %}"></i></a></td>
       </tr>
       {% endfor %}
     </table>
