--- a/templates/student/demov1s.html
+++ b/templates/student/demov1s.html
@@ -60,7 +60,7 @@
         <td> {{t.sev}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
         
         
-        <td><a style="padding-left:40%;"<i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview1' t.id  %}"></i></a></td>
+        <td><a style="padding-left:40%;"<i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview1s' t.id  %}"></i></a></td>
       </tr>
       {% endfor %}
     </table>
