--- a/templates/student/demov2s.html
+++ b/templates/student/demov2s.html
@@ -58,7 +58,7 @@
         <td> {{t.eig}}</td>
         
         
-        <td><a <i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview2' t.id  %}"></i></a></td>
+        <td><a <i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview2s' t.id  %}"></i></a></td>
       </tr>
       {% endfor %}
     </table>
