--- a/templates/student/demov4s.html
+++ b/templates/student/demov4s.html
@@ -58,7 +58,7 @@
         <td> {{t.ten}}</td>
         
         
-        <td><a <i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview4' t.id  %}"></i></a></td>
+        <td><a <i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview4s' t.id  %}"></i></a></td>
       </tr>
       {% endfor %}
     </table>
