--- a/templates/student/demovs.html
+++ b/templates/student/demovs.html
@@ -61,7 +61,7 @@
         <td> {{t.six}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
         
         
-        <td><a style="padding-left:40%;"<i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview' t.id  %}"></i></a></td>
+        <td><a style="padding-left:40%;"<i class="fa fa-eye" aria-hidden="true" href="{% url 'demoviewsv' t.id  %}"></i></a></td>
       </tr>
       {% endfor %}
     </table>
