--- a/templates/student/classmains.html
+++ b/templates/student/classmains.html
@@ -84,7 +84,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> <a href="demovs" style="text-decoration: none;color:white;">6th class video tutorials</a> </h6>
+            <h6 class="m-b-20"> <a href="demovsv" style="text-decoration: none;color:white;">6th class video tutorials</a> </h6>
             <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_student}}</span></h2>
             
           </div>
