--- a/templates/myhome.html
+++ b/templates/myhome.html
@@ -155,7 +155,7 @@
       <div class="col-md-12 col-sm-12">
         <div style="color:#ffffff;" class="wow fadeInUp footer-copyright">
         <br>
-          <p>Terms<br>
+          <p>Terms | Version 1.2 <br>
             Copyright &copy; Prabodh Education Organisation 2021 </p><br>
         </div>
       </div>
