--- a/templates/syllabus/s2.html
+++ b/templates/syllabus/s2.html
@@ -105,12 +105,71 @@
     }
 
     
-    
  
     </style>
   </head>
 <br><br>
+  <h1> 7th Class Maths  </h1>
+ 
+  <p>Chapter 1 Integers<br>
+   Chapter 2 Fractions, Decimals and Rational Numbers<br>
+   Chapter 3 Simple Equations<br>
+Chapter 4 Lines and Angles<br>
+Chapter 5 Triangle and its Properties<br>
+Chapter 6 Ratio- Applications<br>
+Chapter 7 Data Handling<br>
+Chapter 8 Congruency of Triangles<br>
+Chapter 9 Construction of Triangles<br>
+Chapter 10 Algebraic Expressions<br>
+Chapter 11 Powers and Exponents<br>
+Chapter 12 Quadrilaterals<br>
+Chapter 13 Area and Perimeter<br>
+Chapter 14 Understanding 3D and 2D shapes<br>
+Chapter 15 Symmetry</p>
 
+<h1> 7th Class Science  </H1>
+<p>Chapter 1 Food Components<br>
+Chapter 2 Acids and Bases<br>
+Chapter 3 Animal Fibre<br>
+Chapter 4 Motion and Time<br>
+Chapter 5 Heat-Measurement<br>
+Chapter 6 Weather and Climate<br>
+Chapter 7 Electricity<br>
+Chapter 8 Air, Winds and Cyclones<br>
+Chapter 9 Reflection of Light<br>
+Chapter 10 Nutrition in Plants<br>
+Chapter 11 Respiration in Organisms<br>
+Chapter 12 Reproduction in Plants<br>
+Chapter 13 Seed Dispersal<br>
+Chapter 14 Water<br>
+Chapter 15 Soil: Our Life<br>
+Chapter 16 Forest: Our Life<br>
+Chapter 17 Changes Around Us</p>
+<h1> 7th Class Social</h1>
+<p>Chapter 1	Reading Maps of Different Kinds<br>
+Chapter 2	Rain and Rivers<br>
+Chapter 3	Tanks and Ground Water<br>
+Chapter 4	Oceans and Fishing<br>
+Chapter 5	Europe<br>
+Chapter 6	France – A European Country<br>
+Chapter 7	Africa<br>
+Chapter 8	Nigeria – An African Country<br>
+Chapter 9	Handicrafts and Handlooms<br>
+Chapter 10	Industrial Revolution<br>
+Chapter 11	Production in a Factory – A Paper Mill<br>
+Chapter 12	Importance of Transport System<br>
+Chapter 13	New Kings and Kingdoms<br>
+Chapter 14	The Kakatiyas – Emergence of a Regional Kingdom<br>
+Chapter 15	The Kings of Vijayanagara<br>
+Chapter 16	Mughal Empire<br>
+Chapter 17	Establishment of British Empire in India<br>
+Chapter 18	Making of Laws 18 in the State Assembly<br>
+Chapter 19	Implementation of Laws in the District<br>
+Chapter 20	Caste Discrimination and the Struggle for Equality<br>
+Chapter 21	Livelihood and Struggles of Urban Workers<br>
+Chapter 22	Folk Religion<br>
+Chapter 23	Devotional Paths to the Divine<br>
+Chapter 24	Rulers and Buildings</p>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
 
