--- a/templates/student/studentbase.html
+++ b/templates/student/studentbase.html
@@ -189,7 +189,7 @@
     <a href="/student/student-exam"><i class="fa fa-pencil" aria-hidden="true"></i><span><font face = "Comic sans MS" size =" 3">Exams</font></span></a>
     <a href="/student/student-marks"><i class="fa fa-check" aria-hidden="true"></i><span><font face = "Comic sans MS" size =" 3">Marks</font></span></a>
     <a href="/student/student-video"><i class="fa fa-youtube" aria-hidden="true"></i><span><font face = "Comic sans MS" size =" 3">Youtube Tutorials</font></span></a>
-    <a href="psviews"><i class="fa fa-pinterest-p" aria-hidden="true"></i><span><font face = "Comic sans MS" size =" 3">Prabodh Tutorials</font></span></a>
+    <a href="/student/psviews"><i class="fa fa-pinterest-p" aria-hidden="true"></i><span><font face = "Comic sans MS" size =" 3">Prabodh Tutorials</font></span></a>
   </div>
   <!--sidebar end-->
 
