--- a/templates/quiz/adminlogin.html
+++ b/templates/quiz/adminlogin.html
@@ -17,7 +17,7 @@
 .box input[type="text"],
 .box input[type="password"] {
     border: 0;
-    background: none;
+    background: #2ecc71;
     display: block;
     margin: 20px auto;
     text-align: center;
@@ -62,7 +62,7 @@
 }
 
 .box input[type="submit"]:hover {
-    background: #ff66;
+    background: #2ecc71;
 }
 
 
